unpackaged/main/default/objects/ProcessException/ProcessException.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>