unpackaged/main/default/objects/ProcessException/fields/Aditional_Information__c.field-meta.xml
<CustomField>
    <fullName>Aditional_Information__c</fullName>
    <label>Aditional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>