unpackaged/main/default/objects/ProcessException/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/orders/"+ recordId__c,"Go to Order Summary in ERP", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get ERP URL</label>
    <type>Text</type>
</CustomField>