unpackaged/main/default/objects/ProcessException/fields/Icon_indicator_type__c.field-meta.xml
<CustomField>
    <fullName>Icon_indicator_type__c</fullName>
    <formula>IF(
    OR(
								Type__c = "Subtractive &amp; Past Due",
								Type__c = "Additive Only &amp; Past Due",
								Type__c = "T-3 Days Out",
								Type__c = "Additive Job Past Due"
				),
				"standard:scheduling_constraint",
				IF(
								OR(
            Type__c = "Top 20 Customer",
								    Type__c = "Bad Outcomes - Order Bad Outcome",
								    Type__c = "MQ &gt; $ Threshold",
								    Type__c = "Expired",
								    Type__c = "Created in ERP",
								    Type__c = "Bad Outcomes - Job Bad Outcome",
								    Type__c = "Created in ERP",
								    Type__c = "Expedited",
								    Type__c = "Rejected Part",
								    Type__c = "MQ w/ Custom Finish",
								    Type__c = "Non-Standard Inspection",
								    Type__c = "SPOC Supplier",
								    Type__c = "Top Quality Account",
								    Type__c = "&gt; Additive Job Value Threshold"
								),
								"standard:problem",
								IF(
												Type__c = "POD",
												"standard:checkout",
												""
								)
				)
)</formula>
    <label>Icon indicator type</label>
    <type>Text</type>
</CustomField>