unpackaged/main/default/objects/ProcessException/fields/Initial_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Initial_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Criteria</label>
    <type>Checkbox</type>
</CustomField>