unpackaged/main/default/objects/ProcessException/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>