unpackaged/main/default/objects/ProcessException/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Process Exceptions</relationshipLabel>
    <relationshipName>Process_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>