unpackaged/main/default/objects/ProcessException/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <label>Order ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>