unpackaged/main/default/objects/ProcessException/fields/Qualifying_Object__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Object__c</fullName>
    <label>Qualifying Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>