unpackaged/main/default/objects/ProcessException/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>TextArea</type>
</CustomField>